--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="Life Sync" />
-    <meta name="theme-color" content="#4f46e5" />
+    <meta name="theme-color" content="#0a0a0b" />
+    <meta name="color-scheme" content="dark" />
     <meta name="description" content="Manage your work agenda, private schedule, shopping lists, and custody periods all in one app" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="manifest" href="/manifest.json" />
